--- a/firstConsoleApp/firstConsoleApp.csproj
+++ b/firstConsoleApp/firstConsoleApp.csproj
@@ -4,4 +4,6 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
+  <ItemGroup>
+  </ItemGroup>
 </Project>
